Finish porting snake?