@@ -21,6 +21,14 @@ public final class SnakeGame extends ScreenGame {
     public String getIdentifier() {
         return "snake";
     }
+
+    @Override
+    public void init() {
+        snake_points.clear();
+        snake_points.add(Pair.of(8,8));
+        snakeDir = 1;
+        resetApple();
+    }
     
     @Override
     public void update() {
@@ -33,32 +41,46 @@ public final class SnakeGame extends ScreenGame {
         i%=50;
     
         if (i%5==0) {
-          int x = snake_points.get(0).getFirst();
-          int y = snake_points.get(0).getSecond();
-    
-          if (snakeDir==0) y--;
-          if (snakeDir==1) x++;
-          if (snakeDir==2) y++;
-          if (snakeDir==3) x--;
-    
-          if (i%25==0) {
-            x = apple.getFirst() + applev.getFirst();
-            if (x<0) x=0; if (x>15) x=15;
-            y = apple.getSecond() + applev.getSecond();
-            if (y<0) y=0; if (y>15) y=15;
-          }
-    
-          if (x<0 || x>=16 || y<0 || y>=16 || inSnake(x,y)) {
-            gameOverTimer = 50;
-          } else {
-            snake_points.add(0,Pair.of(x,y));
-    
-            if (x==apple.getFirst() && y==apple.getSecond()) {
-              resetApple();
-            } else {
-              snake_points.remove(snake_points.size()-1);
+            int x = snake_points.get(0).getFirst();
+            int y = snake_points.get(0).getSecond();
+
+            if (snakeDir==0) y--;
+            if (snakeDir==1) x++;
+            if (snakeDir==2) y++;
+            if (snakeDir==3) x--;
+
+            if (i%25==0) {
+                x = apple.getFirst() + applev.getFirst();
+                if (x<0) x=0; if (x>15) x=15;
+                y = apple.getSecond() + applev.getSecond();
+                if (y<0) y=0; if (y>15) y=15;
             }
-          }
+
+            if (x<0 || x>=16 || y<0 || y>=16 || inSnake(x,y)) {
+                gameOverTimer = 50;
+            } else {
+                snake_points.add(0,Pair.of(x,y));
+
+                if (x==apple.getFirst() && y==apple.getSecond()) {
+                    resetApple();
+                } else {
+                    snake_points.remove(snake_points.size()-1);
+                }
+            }
+        }
+    }
+
+    @Override
+    public void povUpdate(int con, int dir) {
+        if (con==0) {
+            if (dir%2 != snakeDir%2) snakeDir = dir;
+        } else if (con==1) {
+            switch (dir) {
+                case 0: applev = Pair.of(-1,0);
+                case 1: applev = Pair.of(0,1);
+                case 2: applev = Pair.of(1,0);
+                case 3: applev = Pair.of(0,-1);
+            }
         }
     }
 
@@ -90,20 +112,13 @@ public final class SnakeGame extends ScreenGame {
             
             int x = apple.getFirst();
             int y = apple.getSecond();
-        
+            
             controller.setRGB(x, y, 127, 0, 0);
-    
+            
             controller.pulse(0, 127, 0, 50);
         }
-    
+        
         controller.flush();
-    }
-  
-    public void resetSnake() {
-      snake_points.clear();
-      snake_points.add(Pair.of(8,8));
-      snakeDir = 1;
-      resetApple();
     }
   
     private void resetApple() {
@@ -125,19 +140,5 @@ public final class SnakeGame extends ScreenGame {
         if (x == item.getFirst() && y == item.getSecond()) return true;
       }
       return false;
-    }
-
-    @Override
-    public void povUpdate(int con, int dir) {
-        if (con==0) {
-            if (dir%2 != snakeDir%2) snakeDir = dir;
-        } else if (con==1) {
-            switch (dir) {
-                case 0: applev = Pair.of(-1,0);
-                case 1: applev = Pair.of(0,1);
-                case 2: applev = Pair.of(1,0);
-                case 3: applev = Pair.of(0,-1);
-            }
-        }
     }
 }
